k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: bookapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: konuamah/backend:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bookapp
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080       # explicit nodePort (optional)
  type: NodePort
